# fantasy-league-be

./: .gitignore  Dockerfile  README.md  api_specs.md  generate_squad_payload.py  notes.md  pyproject.toml  requirements.txt  run_flow.bat  schemas_fb.sql
.github/workflows/: lint.yml
app/: __init__.py  check_gameweek_status.py  db_events.py  db_models.py  dependencies.py  find_valid_substitution.py  generate_squad_payload.py  get_valid_transfer_examples.py  logger.py  main.py  schemas.py  settings.py
app/auth/: __init__.py  models.py  routes.py  service.py
app/fixtures/: routes.py  service.py
app/manager/: routes.py  schemas.py  service.py
app/player/: routes.py  service.py
app/scoring/: routes.py  service.py
app/scripts/: init_db.py  run_flow.py  seed_db.py
app/team/: routes.py
app/user/: __init__.py  models.py  routes.py  service.py
app/utils/: db.py  responses.py
